# genaiic-insurance-claims

./: .gitignore  README.md  app.py  config.yml  pyproject.toml
assets/lambda/backend/extract_attributes/: extract_attributes.py  prompt.py  prompt_summary.py  utils.py
assets/lambda/backend/extract_attributes_llm/: extract_attributes_llm.py  helpers.py  prompt.py  requirements.txt
assets/lambda/backend/extract_attributes_llm/model/: bedrock.py  params.py
assets/lambda/backend/extract_attributes_llm_image/: Dockerfile  extract_attributes_llm_image.py  helpers.py  prompt.py  requirements.txt  utils.py
assets/lambda/backend/extract_attributes_llm_image/model/: parser.py
assets/lambda/backend/get_presigned_url/: get_presigned_url.py
assets/lambda/backend/read_office_docker/: Dockerfile  read_office.py  requirements.txt  utils.py
assets/lambda/backend/run_textract/: run_textract.py  utils.py
assets/lambda/backend/run_transcribe/: run_transcribe.py
assets/layers/tabulate/python/: requirements.txt
assets/layers/tabulate/python/messaging/: service.py
assets/layers/tabulate/python/messaging/publishers/: base.py
assets/layers/tabulate/python/model/: __init__.py  bedrock.py  parser.py
assets/layers/textractor/: requirements.txt
assets/state_machine/: tabulate.json
assets/streamlit/: .env  Dockerfile  build_docker.sh  pyproject.toml
assets/streamlit/.streamlit/: config.toml  pages.toml
assets/streamlit/src/: Home.py
assets/streamlit/src/app_pages/: Tabulate.py
assets/streamlit/src/components/: api.py  authenticate.py  constants.py  frontend.py  model.py  s3.py  ssm.py  styling.py
demo/: tabulate_demo.ipynb  utils.py
demo/originals/: email_1.txt  email_2.txt  email_3.txt
diagram/: architecture.drawio
infra/: __init__.py  tabulate_stack.py
infra/constructs/: __init__.py  tabulate_api.py  tabulate_buckets.py  tabulate_layers.py
infra/stacks/: __init__.py  tabulate_streamlit.py
