[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Tabulate"
version = "0.3.0"
description = "Extract custom info from unstructured documents using Generative AI"
authors = [
    "Nikita Kozodoi <kozodoi@amazon.de>",
]

[tool.poetry.dependencies]
python = "^3.9.0"
aws-cdk-lib = ">=2.133.0"
constructs = "^10.0.0"
boto3 = "~1.27.0"
pyyaml = "^6.0.0"
aws-cdk-aws-apigatewayv2-alpha = "^2.0"
aws-cdk-aws-apigatewayv2-integrations-alpha = "^2.0.0"
aws-cdk-aws-apigatewayv2-authorizers-alpha = "^2.0.0"
aws-lambda-powertools = {extras = ["validation"], version = "^2.25.1"}
cdk-nag = "^2.28.71"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.7"
isort = "^5.12.0"
ipykernel = "^6.25.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.0.0"
hypothesis = "^6.87.3"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true

[tool.ruff]
select = ["E", "F", "C", "W", "R", "B", "Q"]
line-length = 120
target-version="py39"
extend-include = ["*.ipynb"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "venv",
    ".venv",
]

[tool.ruff.pydocstyle]
convention = "numpy"
